--- a/Helloworldapp.web/Views/Home/Privacy.cshtml
+++ b/Helloworldapp.web/Views/Home/Privacy.cshtml
@@ -3,4 +3,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your a site's privacy policy. adfd</p>
+<p>Use this page to detail your a a site's privacy policy. adfd</p>
